# tempo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REFERENCE.md
app/nn1dist/: CMakeLists.txt
app/nn1dist/src/: any.cpp  any.hpp  main.cpp  parsarg.hpp
app/pf/: CMakeLists.txt
app/pf/src/: any.cpp  main.cpp
app/pf2018/: CMakeLists.txt
app/pf2018/src/: any.cpp  any.hpp  main.cpp
app/pfdev/: CMakeLists.txt
app/pfdev/src/: any.cpp  any.hpp  main.cpp
app/utils/: parsarg.hpp  parsarg_predefs.hpp
bindings/java/: .project
bindings/java/src/: module-info.java
bindings/python/: CMakeLists.txt  example.py  setup.py
bindings/python/src/pytempo/: bindings.cpp  utils.hpp
bindings/python/src/pytempo/tseries/: bindings.hpp
bindings/python/src/pytempo/univariate/distances/: bindings.hpp  pybind_dtw.hpp  pybind_erp.hpp  pybind_lcss.hpp  pybind_msm.hpp  pybind_squaredED.hpp  pybind_twe.hpp
bindings/python/src/pytempo/univariate/transforms/: bindings.hpp  pybind_derivative.hpp
bindings/python/src/tempo/: utils.hpp
bindings/python/src/tempo/univariate/distances/: bindings.cpp  pybind_dtw.hpp  pybind_erp.hpp  pybind_lcss.hpp  pybind_msm.hpp  pybind_squaredED.hpp  pybind_twe.hpp
cmake/: FindMLPACK.cmake  basis.cmake  cmake_utils.cmake  read_version.cmake
experiments/: CONFIGURE_ME.py  README.md  eeOutputFold0.csv  ee_fold0_accuracies.csv  ee_fold0_accuracies.json  parlauncher.py
experiments/2021-03-LB-DTW/: README.md  analysis.py  generatecmds.py
experiments/2021-04-19-PF2018-comparison/: README.md  analysis.py  generate_cmds.py
experiments/2021-04-19-PF2018-comparison/PF2018_java/: pf2018java.sh
experiments/2021-04-19-PF2018-comparison/PF2018_java/ProximityForest/: .classpath  .gitignore  .project  (+1 more)
experiments/2021-04-26-Distance-ADTW/: generate_cmds.py
experiments/2021-04-26-Distance-ADTW/loocv_adtw/: CMakeLists.txt
experiments/2021-04-26-Distance-ADTW/loocv_adtw/src/: main.cpp
experiments/2021-04-26-Distance-PDTW/: generate_cmds.py
experiments/2021-04-26-Distance-PDTW/loocv_adtw/: CMakeLists.txt
experiments/2021-04-26-Distance-SED/nn1dist/: CMakeLists.txt
experiments/2021-04-26-Distance-SED/nn1dist/src/: main.cpp
experiments/2021-05-11-PFDevADTW/: CMakeLists.txt  generate_cmds.py
experiments/2021-05-11-PFDevADTW/src/: any.cpp  main.cpp
extra/python/: CMakeLists.txt  setup.py
extra/python/src/: binder.cpp  binder.hpp  binder_common.hpp  univariate_distance.cpp  univariate_transform.cpp
extra/python/test/: requirements.txt  test_distances.py
include/tempo/tseries/: dataset.hpp  indexSet.hpp  transform.hpp  tseries.hpp  tspack.hpp
include/tempo/tseries_new/: tseries.hpp
include/tempo/utils/: capsule.hpp  jsonvalue.hpp  partasks.hpp  progressmonitor.hpp  uncopyable.hpp  utils.hpp  version.hpp
src/tempo/: CMakeLists.txt  predef.hpp
src/tempo/classifier/: CMakeLists.txt  utils.hpp
src/tempo/classifier/PF2018/: CMakeLists.txt  pf2018.hpp
src/tempo/classifier/ProximityForest2/: CMakeLists.txt  pf2.hpp
src/tempo/classifier/TSChief/: CMakeLists.txt  forest.cpp  forest.hpp  pfsplitters.cpp  pfsplitters.hpp  splitter_interface.hpp  tree.cpp  tree.hpp  treedata.hpp  treestate.cpp  treestate.hpp
src/tempo/classifier/TSChief/sleaf/: CMakeLists.txt  pure_leaf.hpp  pure_leaf_smoothp.hpp
src/tempo/classifier/TSChief/snode/meta/: CMakeLists.txt  chooser.hpp
src/tempo/classifier/TSChief/snode/nn1splitter/: CMakeLists.txt  nn1_adtw.cpp  nn1_adtw.hpp  nn1_directa.cpp  nn1_directa.hpp  nn1_dtw.cpp  nn1_dtw.hpp  nn1_dtwfull.cpp  nn1_dtwfull.hpp  nn1_erp.cpp  nn1_erp.hpp  nn1_lcss.cpp  nn1_lcss.hpp  nn1_msm.cpp  nn1_msm.hpp  nn1_twe.cpp  nn1_twe.hpp  nn1_wdtw.cpp  nn1_wdtw.hpp  nn1dist_base.hpp  nn1dist_interface.hpp  nn1splitter.cpp  nn1splitter.hpp  nn1splitter.private.hpp
src/tempo/classifier/loocv/partable/: CMakeLists.txt  dist_interface.hpp  partable.cpp  partable.hpp
src/tempo/dataset/: CMakeLists.txt  dataset.hpp  dts.hpp  tseries.hpp
src/tempo/distance/: CMakeLists.txt  cost_functions.hpp  univariate.cpp  univariate.hpp  univariate.private.hpp  utils.hpp
src/tempo/distance/core/: CMakeLists.txt  utils.private.hpp
src/tempo/distance/core/elastic/: adtw.hpp  adtw.test.univariate.cpp  dtw.hpp  dtw.test.univariate.cpp  dtw_lb_enhanced.hpp  dtw_lb_keogh.hpp  dtw_lb_webb.hpp  erp.hpp  erp.test.univariate.cpp  lcss.hpp  lcss.test.univariate.cpp  msm.hpp  msm.test.univariate.cpp  twe.hpp  twe.test.univariate.cpp  wdtw.hpp  wdtw.test.univariate.cpp
src/tempo/distance/core/lockstep/: direct.hpp  direct.test.cpp
src/tempo/reader/: CMakeLists.txt  reader_output.hpp  readingtools.hpp
src/tempo/reader/csv/: csv.cpp  csv.hpp  csv.template.cpp  csv.test.cpp
src/tempo/reader/csv/univariate/: csv.cpp  csv.hpp  csv.template.cpp  csv.test.cpp  test_univariate.csv
src/tempo/reader/ts/: ts.cpp
src/tempo/transform/: CMakeLists.txt  univariate.cpp  univariate.hpp  univariate.private.hpp
src/tempo/transform/core/: CMakeLists.txt  univariate.derivative.hpp
src/tempo/utils/: CMakeLists.txt  concepts.hpp  label_encoder.hpp  readingtools.hpp  simplecli.hpp  utils.cpp  utils.hpp
src/tempo/utils/utils/: stats.hpp  uncopyable.hpp
test/: tests.cpp
test/mock/: mockseries.hpp
tests/: CMakeLists.txt
tests/catch/: catch.hpp
tests/tseries/: dataset.cpp
tests/univariate/: cdtw.cpp  dtw.cpp  elementwise.cpp  lcss.cpp  tests.cpp  tests_tools.cpp  tests_tools.hpp  wdtw.cpp
tests/univariate/classifiers/: nn1.cpp
tests/univariate/distances/: cdtw.cpp  dtw.cpp  elementwise.cpp  erp.cpp  lcss.cpp  msm.cpp  twe.cpp  wdtw.cpp
tests/univariate/distances/references/dtw/: cdtw.cpp  cdtw.hpp  dtw.cpp  dtw.hpp  wdtw.cpp  wdtw.hpp
tests/univariate/distances/references/erp/: erp.cpp  erp.hpp
tests/univariate/distances/references/lcss/: lcss.cpp  lcss.hpp
tests/univariate/distances/references/msm/: msm.cpp  msm.hpp
tests/univariate/distances/references/twe/: twe.cpp  twe.hpp
tests/univariate/references/dtw/: cdtw.cpp  cdtw.hpp  dtw.cpp  dtw.hpp  wdtw.cpp  wdtw.hpp
tests/univariate/references/lcss/: lcss.cpp  lcss.hpp
(+54 files in other folders)
